fix : add contact person endpoint
