# internal/core/contact_person/dto/contact_person_request.go
@@ -1,0 +1,6 @@
+package dto
+
+type ContactPersonRequest struct {
+	Name  string `json:"name" binding:"required,min=2,max=255" example:"John Doe"`
+	Phone string `json:"phone" binding:"required,min=6,max=50" example:"+6281234567890"`
+}
